# rust_wasm_text_editor

./: .gitignore  Cargo.toml  Readme.md  index.html  index.js  package.json  postcss.config.js  styles.css  tailwindcss-config.js
rust_text_editor/: Cargo.toml
rust_text_editor/src/: clipboard_service.rs  console.rs  lib.rs
rust_text_editor/src/editor/: caret.rs  cursor.rs  editor.rs  mod.rs
test_app/: Cargo.toml
test_app/.cargo/: config
test_app/src/: lib.rs
