[package]
name = "rust_text_editor"
version = "0.1.0"
authors = ["Ruben Paz <me@ruben.io>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = { version = "0.2.63", features = ["serde-serialize"] }
web-sys = { version = "0.3.40", features = ["HtmlElement", "DomRect", "CssStyleDeclaration", "Element", "Window", "HtmlCanvasElement", "CanvasRenderingContext2d", "TextMetrics"] }
wasm-bindgen-futures = "0.4.13"
js-sys = "0.3.40"
thiserror = "1.0.19"
serde = {version = "1.0.111", features = ["derive"] }
serde_plain = "0.3.0"
yew = "0.16.2"
log = "0.4.8"
